src/apex/force/main/default/objects/VehicleType__c/fields/Distance__c.field-meta.xml
<CustomField>
    <fullName>Distance__c</fullName>
    <label>Distance</label>
    <precision>10</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>