src/apex/force/main/default/objects/VehicleType__c/fields/MaximumPayloadCapacity__c.field-meta.xml
<CustomField>
	<fullName>MaximumPayloadCapacity__c</fullName>
	<label>Maximum Payload Capacity (lb)</label>
	<precision>7</precision>
	<scale>0</scale>
	<type>Number</type>
</CustomField>