src/apex/force/main/default/objects/VehicleType__c/fields/Time__c.field-meta.xml
<CustomField>
    <fullName>Time__c</fullName>
    <label>Time</label>
    <precision>10</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>